# thermal-sentry

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-pi.txt  requirements-train.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 394a4055195b_initial_schema.py
deploy/: install_pi.sh  thermal-sentry.service
models/: thermal_cnn.eval.json  thermal_cnn.export.json  thermal_cnn.onnx  thermal_cnn.pt  thermal_cnn.report.json  thermal_cnn_int8.onnx
scripts/: eval.py  export.py  retrain_scaleup.py  train.py
tests/: conftest.py  test_alerts.py  test_anomaly.py  test_app.py  test_calibration.py  test_camera.py  test_channels.py  test_cli.py  test_config_and_imports.py  test_detector.py  test_manager.py  test_ml.py  test_ml_export_eval.py  test_observability.py  test_persistence.py  test_pipeline.py  test_preprocess.py  test_runtime.py  test_security.py  test_sensors.py  test_simulator.py  test_tracker.py  test_web_server.py
thermalsentry/: __init__.py  app.py  cli.py  config.py  observability.py  runtime.py
thermalsentry/alerts/: __init__.py  channels.py  manager.py
thermalsentry/detection/: __init__.py  anomaly.py  detector.py  tracker.py
thermalsentry/ml/: __init__.py  backends.py  dataset.py  eval.py  export.py  labels.py  model.py  train.py
thermalsentry/persistence/: __init__.py  models.py  store.py
thermalsentry/processing/: __init__.py  preprocess.py
thermalsentry/sensors/: __init__.py  base.py  calibration.py  camera.py  file_source.py  mlx90640.py  simulator.py
thermalsentry/web/: __init__.py  security.py  server.py
thermalsentry/web/static/: app.js  index.html  login.html  style.css
