[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-sentry"
version = "0.1.0"
description = "Edge thermal AI for Raspberry Pi: detect people, heat-sources and thermal anomalies from an MLX90640, with a live web dashboard and alerting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OCT0PUSPR" }]
keywords = [
    "thermal",
    "raspberry-pi",
    "edge-ai",
    "mlx90640",
    "computer-vision",
    "iot",
    "people-counting",
    "anomaly-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "numpy>=1.23,<3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1",
    "httpx>=0.26",
    "pillow>=10.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
accel = ["scipy>=1.10", "opencv-python-headless>=4.8"]
pi = [
    "adafruit-circuitpython-mlx90640>=1.3",
    "adafruit-blinka>=8.0",
    "scipy>=1.10",
]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.3", "scipy>=1.10"]
train = ["torch>=2.0", "onnx>=1.14", "onnxruntime>=1.16"]

[project.urls]
Homepage = "https://github.com/OCT0PUSPR/thermal-sentry"
Repository = "https://github.com/OCT0PUSPR/thermal-sentry"
Issues = "https://github.com/OCT0PUSPR/thermal-sentry/issues"

[project.scripts]
thermal-sentry = "thermalsentry.cli:main"

[tool.setuptools]
packages = [
    "thermalsentry",
    "thermalsentry.sensors",
    "thermalsentry.processing",
    "thermalsentry.detection",
    "thermalsentry.ml",
    "thermalsentry.alerts",
    "thermalsentry.persistence",
    "thermalsentry.web",
]

[tool.setuptools.package-data]
"thermalsentry.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# NB: pyupgrade ("UP") is intentionally NOT selected. The project supports
# Python 3.9 at runtime and some annotations (pydantic models / settings) are
# evaluated at runtime, so typing.Optional / typing.List are deliberate.
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",  # line length is handled by the formatter / left to judgement
    "B008",  # FastAPI uses callables in argument defaults (Depends/Body)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.bandit]
# Scan the package only (tests legitimately use asserts / fakes).
exclude_dirs = ["tests", "alembic", "scripts"]
# B110 (try/except/pass): used deliberately throughout as defensive isolation so
# a single sensor/inference/metrics/subscriber error never crashes the pipeline.
# Every such block is intentional resilience, not swallowed control flow.
skips = ["B110"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true        # torch / onnx / fastapi / paho stubs vary by env
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
# Pragmatic gate: catch real type errors in the core without demanding full
# annotations on every defensive/3rd-party-shaped boundary.
check_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["thermalsentry.ml.*"]
# torch tensors are dynamically typed; the ML modules are import-guarded.
ignore_errors = true

# numpy ships PEP 695 `type` statements in its py3.12 stubs that mypy rejects
# under python_version = "3.9"; skip following numpy (and its stubs) entirely.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true
